# aos_core_iam_cpp

./: .gitmodules  CMakeLists.txt  README.md  host_build.sh
.github/workflows/: build_test.yaml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  app.hpp  log.hpp
src/config/: config.cpp  config.hpp
src/database/: CMakeLists.txt  database.cpp  database.hpp
src/fileidentifier/: fileidentifier.cpp  fileidentifier.hpp
src/iam/client/: iamclient.cpp
src/iamclient/: iamclient.cpp  iamclient.hpp
src/iamserver/: iamserver.cpp  iamserver.hpp
src/nodeinfoprovider/: nodeinfoprovider.cpp  nodeinfoprovider.hpp  systeminfo.cpp
src/utils/: exception.hpp
src/visidentifier/: pocowsclient.cpp  pocowsclient.hpp  visidentifier.cpp  visidentifier.hpp  vismessage.cpp  wsexception.hpp  wspendingrequests.cpp  wspendingrequests.hpp
tests/: CMakeLists.txt
tests/config/: config_test.cpp
tests/database/: database_test.cpp
tests/fileidentifier/: fileidentifier_test.cpp
tests/iamclient/: iamclient_test.cpp
tests/iamserver/: CMakeLists.txt  iamserver_test.cpp  openssl.conf  protectedmessagehandler_test.cpp  publicmessagehandler_test.cpp
tests/nodeinfoprovider/: nodeinfoprovider_test.cpp
tests/src/: exception_test.cpp
tests/visidentifier/: pocowsclient_test.cpp  visidentifier_test.cpp
