#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET aos_iamanager_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES ../../src/logger/logger.cpp src/exception_test.cpp)

# ######################################################################################################################
# Includes
# ######################################################################################################################

include_directories(${CMAKE_SOURCE_DIR}/src)

# ######################################################################################################################
# Test
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})
target_link_libraries(${TARGET} aoscommon Poco::Util ${JOURNALD_LIBRARIES} GTest::gmock_main)

gtest_discover_tests(${TARGET})
